--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon ./bin/www"
+		"dev": "nodemon ./bin/www",
+		"start": "node ./bin/www"
 	},
 	"keywords": [],
 	"author": "",
